Update EditForm & fix default spacing

--- a/canvas_modules/common-canvas/src/common-properties/controls/toggle/toggle.scss
+++ b/canvas_modules/common-canvas/src/common-properties/controls/toggle/toggle.scss
@@ -16,6 +16,7 @@
 
 .bx--toggle__switch {
 	margin-bottom: $spacing-04;
+	padding-bottom: 0;
 }
 
 .properties-table-cell-control { // overrides when in a table cell
